[package]
name = "rectangle"
version = "0.1.0"
authors = ["Roger Curley <rocurley@gmail.com>"]

[profile.release]
debug = true

[dependencies]
ndarray = "0.13.0"
itertools = "0.6.2"
pbr = "1.0.0"
fnv = "1.0.5"
cpuprofiler = "0.0.3"
clap = "2.26.0"
ascii = "0.8.6"
typed-arena = "1.3.0"
enumset = "0.4.4"
bit-set = "0.5.1"
bit-vec = "0.5.1"
enum-map = "0.6.2"

[dev-dependencies]
criterion = "0.3"
proptest = "0.9.4"

[[bench]]
name = "main"
harness = false
